@@ -5,6 +5,8 @@
 
  ** install source tests as part of package
 
+ ** dicominfo updated to support sequences of unknown length
+
  Summary of important user-visible changes for dicom 0.1.1 (2011/11):
 -------------------------------------------------------------------------
 
